[metadata]
name = qlapi
version = 0.0.1
author = yuxian158
author_email = yuxian158@gmail.com
description = 青龙api SDK
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yuxian158/ql-api
project_urls =
    Bug Tracker = https://github.com/yuxian158/ql-api/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src